# Invomanager

./: .env.example  .replit  app.py  auth.py  database.py  database_postgres.py  equipment_inventory.db  gunicorn_config.py  main.py  models.py  pdf_export.py  pyproject.toml  replit.md  run.py  start_production.py  wsgi.py
attached_assets/: Pasted--Detailed-Implementation-Prompt-for-Replit-Project-Overview-Add-a-document-management-system-to-1754527983549_1754527983554.txt  Pasted--Fix-Create-Bundle-Functionality-with-AJAX-Document-Loading-Problem-Analysis-The-Create-Bundle-1755285078019_1755285078020.txt  Pasted--Technician-Invite-System-Implementation-Overview-Add-an-Invite-Tech-button-to-the-admin-docu-1755280504236_1755280504239.txt  Pasted-Add-a-comprehensive-invoice-generation-system-to-the-Equipment-Inventory-Management-System-with-the--1753705202938_1753705202939.txt  Pasted-Build-a-desktop-equipment-inventory-management-system-for-safety-climbing-equipment-with-the-followi-1752522865715_1752522865716.txt  Pasted-Equipment-Inventory-Management-System-Jobs-Billing-Module-Implementation-Complete-Feature-Specif-1752631435329_1752631435330.txt  Pasted-The-application-currently-has-no-way-to-delete-jobs-Please-implement-a-comprehensive-job-deletion-f-1754483829269_1754483829270.txt  Pasted-The-invoice-functionality-has-several-critical-issues-that-need-fixing-Issue-1-Remove-Equipment-Re-1754482891937_1754482891938.txt  Pasted-The-invoice-system-has-several-critical-issues-that-need-fixing-Issue-1-Fix-Default-Invoice-Status-1754484627660_1754484627662.txt  (+1 more)
(+27 files in other folders)
