[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-wtf>=1.2.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "wtforms>=3.2.1",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "requests>=2.32.4",
    "gunicorn>=23.0.0",
    "reportlab>=4.4.2",
    "python-dateutil>=2.9.0.post0",
    "pypdf2>=3.0.1",
    "werkzeug>=3.1.3",
    "pillow>=11.3.0",
]
